uploaded background image and css updates

--- a/index.html
+++ b/index.html
@@ -3,26 +3,28 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <title>NYT Search</title>
+  <meta charset="utf-8">
+  <title>NYT Search</title>
+  <link href="https://fonts.googleapis.com/css?family=Julius+Sans+One|Reem+Kufi" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-<!--  <link rel="stylesheet" type="text/css" href="style.css">-->
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
 
   <div class="container">
 
-    <div class="jumbotron" style="background-color: #003366; color: silver;">
+    <div class="jumbotron" style="background-color: #336699; color: white;">
       <h1 class="text-center">
         <strong>
-        <div class="glyphicon glyphicon-book"></div>
-        New York Times Article Search
+          <div class="glyphicon glyphicon-book"></div>
+          New York Times Article Search
+          <div class="glyphicon glyphicon-book"></div>
         </strong>
       </h1>
     </div>
 
-    <div class="row">
+    <div class="row" id="searchParameters">
       <div class="col-sm-12">
         <br>
         <div class="panel panel-primary">
